# vala-fi-mcp

./: .gitignore  LICENSE  README.md  mcp.json  pyproject.toml  smithery.yaml
src/vala_fi_mcp/: __init__.py  server.py
