[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vala-fi-mcp"
version = "0.1.2"
description = "MCP server for Vala-Fi — query company relationships from SEC filings directly from Claude, Cursor, or any MCP client"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Vala-Fi" }]
keywords = [
    "mcp",
    "finance",
    "supply-chain",
    "sec-filings",
    "knowledge-graph",
    "claude",
    "ai-agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
vala-fi-mcp = "vala_fi_mcp.server:main"

[project.urls]
Homepage = "https://valafi.dev"
Documentation = "https://valafi.dev/docs"
Repository = "https://github.com/academicnair009/vala-fi-mcp"
"Get API Key" = "https://valafi.dev/signup"
